非常简单的题目，基于之前已经有的基于list序列化listnode和从listnode转换成list的方法非常容易实现